# mapreduce

./: .gitignore  CMakeLists.txt  README  README.md  mapreduce.sln  mapreduce.vcproj  mapreduce.vcxproj  mapreduce.vcxproj.filters  mapreduce.vs2012.sln  mapreduce.vs2012.vcxproj  mapreduce.vs2013.sln  mapreduce.vs2013.vcxproj  mapreduce.vs2015.sln  mapreduce.vs2015.vcxproj
doc/: future.html  index.html  platform.html  schedule_policies.html  tutorial.html  wordcount.html
examples/friends/: CMakeLists.txt  Makefile  friends.cpp  friends.vcxproj  friends.vcxproj.filters  friends.vs2012.vcxproj  friends.vs2013.vcxproj  friends.vs2015.vcxproj
examples/prime/: CMakeLists.txt  prime.cpp  prime.vcproj  prime.vcxproj  prime.vcxproj.filters  prime.vs2012.vcxproj  prime.vs2013.vcxproj  prime.vs2015.vcxproj
examples/wordcount/: CMakeLists.txt  wordcount.cpp  wordcount.h  wordcount.vcproj  wordcount.vcxproj  wordcount.vcxproj.filters  wordcount.vs2012.vcxproj  wordcount.vs2013.vcxproj  wordcount.vs2015.vcxproj
include/: mapreduce.hpp
include/detail/: datasource.hpp  hash_partitioner.hpp  intermediates.hpp  job.hpp  mergesort.hpp  null_combiner.hpp  platform.hpp  schedule_policy.hpp
include/detail/intermediates/: in_memory.hpp  local_disk.hpp
include/detail/schedule_policy/: cpu_parallel.hpp  sequential.hpp
test/: mrtest.cpp  mrtest.vcproj  mrtest.vcxproj
tests/mrtest/: mrtest.cpp  mrtest.vcxproj.filters  mrtest.vs2012.vcxproj  mrtest.vs2013.vcxproj
